@@ -1,6 +1,8 @@
 HEAD
 	+ Fixed problem restoring filenames with shell metacharacters
-	+ Files with unsafe chars are shown in the file list and can be restored
+	+ Files with unsafe chars are shown in the file list and can be
+	restored
+	+ Fixed encryption detection in restore-tool
 2.0.13
 	+ Removed configuration backup warning as now it is always done
 	+ Fixed syncRows method from DomainsBackup to not mark the module
